<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">RMLL 2012</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_testing">Testing</string>
	<string name="menu_update">Update</string>
    <string name="menu_quit">Quit</string>
	<string name="search_label">Search</string>
	<string name="settings_description">RMLL search</string>   
	<string name="menu_test_display_event">Display event</string>
	<string name="menu_prefetch_rooms">Prefetch Maps</string> 
	<string name="synchronize_button">Synchronize</string>
	<string name="synchronize_title">Synchronize</string>
	<string name="synchronize_description">Synchronizes the schedule with the one from RMLL online.\n\nYou need a connection to the Internet for this to work.</string>
	<string name="db_ver">Database last updated:</string>
	<string name="about_text1">RMLL 2012 Schedule application</string>
	<string name="about_text2">Programmed by: \nMichaël Uyttersprot, Pieter Iserbyt and Christophe Vandeplas for FOSDEM. Modified by Jean-Baptiste Aubort for the RMLL 2012.</string>
	<string name="about_text3">Source available at https://github.com/rorist/rmll-android</string> 
	<string name="favorites">Favorites</string>
	<string name="favorites_event_removed">Event removed from favorites</string>
	<string name="favorites_event_added">Event added to favorites</string>
	<string name="share">Share…</string>
	<string name="updater_title">What do you want to update?</string>
    <string name="desc_logo">Logo of the LSM (Libre Software Meeting) in Geneva 2012</string>
	<string-array name="updater_dialog_choices">
		<item name="updater_dialog_choices_xml">Update schedule contents</item>
<!-- 		<item name="updater_dialog_choices_rooms">Preload room images</item> -->
	</string-array>
    
    <string name="day1">Samedi\n7 juillet 2012</string>
    <string name="day2">Dimanche\n8 juillet 2012</string>
    <string name="day3">Lundi\n9 juillet 2012</string>
    <string name="day4">Mardi\n10 juillet 2012</string>
    <string name="day5">Mercredi\n11 juillet 2012</string>
    <string name="day6">Jeudi\n12 juillet 2012</string>
</resources>
