<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/main_bg">
  
  <LinearLayout
        android:id="@+id/btn_box"
        android:layout_width="fill_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_day_1"
                style="@style/day_button"
                android:text="@string/day1" />

            <Button
                android:id="@+id/btn_day_3"
                style="@style/day_button"
                android:text="@string/day3" />

            <Button
                android:id="@+id/btn_day_5"
                style="@style/day_button"
                android:text="@string/day5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_day_2"
                style="@style/day_button"
                android:text="@string/day2" />

            <Button
                android:id="@+id/btn_day_4"
                style="@style/day_button"
                android:text="@string/day4" />

            <Button
                android:id="@+id/btn_day_6"
                style="@style/day_button"
                android:text="@string/day6" />
        </LinearLayout>
    </LinearLayout>

    <Button
      style="@style/main_button"
      android:id="@+id/btn_favorites"
      android:layout_below="@id/btn_box"
      android:text="@string/favorites" />

    <Button
      style="@style/main_button"
      android:id="@+id/btn_search"
      android:layout_below="@id/btn_favorites"
      android:text="@string/search_label" />

    <TextView
      android:id="@+id/progress"
      android:layout_above="@+id/db_ver" />

    <TextView  
      android:id="@+id/db_ver"
      android:layout_alignParentBottom="true" />

</RelativeLayout>
